fix: oas and server undeploy
