# api/oas-doc.yaml
@@ -45,11 +45,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/errorModel'
       requestBody:
-        x-name: product
+        x-name: productRequest
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/product'
+              $ref: '#/components/schemas/productRequest'
         description: Product to be created
         required: true
   '/api/v1/products/{id}':
@@ -87,7 +87,7 @@ paths:
           schema:
             type: string
       responses:
-        '204':
+        '200':
           description: product deleted
         default:
           description: unexpected error
@@ -106,7 +106,7 @@ paths:
           schema:
             type: string
       responses:
-        '204':
+        '200':
           description: product updated
         default:
           description: unexpected error
@@ -115,11 +115,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/errorModel'
       requestBody:
-        x-name: product
+        x-name: productRequest
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/product'
+              $ref: '#/components/schemas/productRequest'
         description: Product to be updated
         required: true
 components:
@@ -135,6 +135,25 @@ components:
           format: int32
         message:
           type: string
+    productRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          minLength: 1
+        description:
+          type: string
+          minLength: 1
+        brand:
+          type: string
+          minLength: 1
+        price:
+          type: number
+      required:
+        - name
+        - description
+        - brand
+        - price
     product:
       type: object
       properties:
@@ -142,7 +161,8 @@ components:
           type: string
           minLength: 1
         id:
-          type: number
+          type: string
+          minLength: 1
         description:
           type: string
           minLength: 1
