# controllers/apiv1productsidControllerService.js
@@ -7,7 +7,8 @@ module.exports.findProductByid = async function findProductByid (req, res, next)
     const productDoc = await firestore.collection('products').doc(req.id.value).get();
     if (!productDoc.exists) {
       res.status(404).send({
-        message: 'Product not found'
+        message: 'Product not found',
+        code: 404
       });
     } else {
       res.send({ ...productDoc.data(), id: productDoc.id });
@@ -15,7 +16,8 @@ module.exports.findProductByid = async function findProductByid (req, res, next)
   } catch (error) {
     console.error(error);
     res.status(500).send({
-      message: 'Error getting product'
+      message: 'Error getting product',
+      code: 500
     });
   }
 };
@@ -29,7 +31,8 @@ module.exports.deleteProduct = async function deleteProduct (req, res, next) {
   } catch (error) {
     console.error(error);
     res.status(500).send({
-      message: 'Error deleting product'
+      message: 'Error deleting product',
+      code: 500
     });
   }
 };
@@ -37,10 +40,10 @@ module.exports.deleteProduct = async function deleteProduct (req, res, next) {
 module.exports.updateProduct = async function updateProduct (req, res, next) {
   try {
     const product = {
-      name: req.product.value.name,
-      price: req.product.value.price,
-      description: req.product.value.description,
-      brand: req.product.value.brand
+      name: req.productRequest.value.name,
+      price: req.productRequest.value.price,
+      description: req.productRequest.value.description,
+      brand: req.productRequest.value.brand
     };
 
     await firestore.collection('products').doc(req.id.value).set(product);
@@ -49,7 +52,8 @@ module.exports.updateProduct = async function updateProduct (req, res, next) {
   } catch (error) {
     console.error(error);
     res.status(500).send({
-      message: 'Error updating product'
+      message: 'Error updating product',
+      code: 500
     });
   }
 };
